--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.5",
+    "moment": "^2.30.1",
     "next": "14.0.3",
     "postcss": "^8",
     "react": "^18",
